{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 5265,
  "lineage": "e8173144-70fc-b69a-37eb-0ffdbe17212b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:vpc/vpc-026fa6b2a9153e65b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07b594856461ba3ee",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-096306b9156882a86",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-026fa6b2a9153e65b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f12407ebdbe3f0a6",
            "owner_id": "639043009224"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:vpc/vpc-026fa6b2a9153e65b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00b4f0d1a59081f78",
            "default_route_table_id": "rtb-0f12407ebdbe3f0a6",
            "default_security_group_id": "sg-0823f2fd73a083ec1",
            "dhcp_options_id": "dopt-096306b9156882a86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-026fa6b2a9153e65b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f12407ebdbe3f0a6",
            "owner_id": "639043009224"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-0fd6a5205ceb96ccf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd6a5205ceb96ccf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0774187c5a9131d3b",
            "private_dns": "ip-10-103-0-104.eu-central-1.compute.internal",
            "private_ip": "10.103.0.104",
            "public_dns": "ec2-35-156-24-55.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.24.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f30741f9da6464d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d00e93b4f15246b",
            "tags": {
              "Name": "db_node_0"
            },
            "tags_all": {
              "Name": "db_node_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f68c1e24411e06c6"
            ]
          },
          "dependencies": [
            "aws_security_group.dbnode_sg",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-DBNodes",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-0fb5a915e248c229c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb5a915e248c229c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090c638e45e3c47c8",
            "private_dns": "ip-10-103-1-147.eu-central-1.compute.internal",
            "private_ip": "10.103.1.147",
            "public_dns": "ec2-54-93-43-56.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.43.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056cd72700ae7e4f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079e02ca7d034f0a7",
            "tags": {
              "Name": "db_node_1"
            },
            "tags_all": {
              "Name": "db_node_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f68c1e24411e06c6"
            ]
          },
          "dependencies": [
            "aws_security_group.dbnode_sg",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-DBNodes",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-07f8ec6c18f9bfb51",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f8ec6c18f9bfb51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e3006f2d9ad272d",
            "private_dns": "ip-10-103-0-57.eu-central-1.compute.internal",
            "private_ip": "10.103.0.57",
            "public_dns": "ec2-3-65-227-122.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.65.227.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cd98f07023fac89",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d00e93b4f15246b",
            "tags": {
              "Name": "db_node_2"
            },
            "tags_all": {
              "Name": "db_node_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f68c1e24411e06c6"
            ]
          },
          "dependencies": [
            "aws_security_group.dbnode_sg",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-DBNodes",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hapee_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-00d8eaabb1fec6924",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d8eaabb1fec6924",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b50deca58affce66",
            "private_dns": "ip-10-101-0-144.eu-central-1.compute.internal",
            "private_ip": "10.101.0.144",
            "public_dns": "ec2-18-196-38-73.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.38.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ade8e587e426db0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a88444f05b593764",
            "tags": {
              "Name": "hapee_node_0"
            },
            "tags_all": {
              "Name": "hapee_node_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f3540469bcb7b0b"
            ]
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.web_node",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-0e3066322a7be62be",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3066322a7be62be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-040de79d91bbab93a",
            "private_dns": "ip-10-101-1-92.eu-central-1.compute.internal",
            "private_ip": "10.101.1.92",
            "public_dns": "ec2-3-74-45-152.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.45.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f6246f93eb91c47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbf7d0006c2d690b",
            "tags": {
              "Name": "hapee_node_1"
            },
            "tags_all": {
              "Name": "hapee_node_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f3540469bcb7b0b"
            ]
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.web_node",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-01e9e9795e6ed06ac",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e9e9795e6ed06ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6dc55e90d5d942b",
            "private_dns": "ip-10-102-0-222.eu-central-1.compute.internal",
            "private_ip": "10.102.0.222",
            "public_dns": "ec2-3-70-96-199.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.96.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb3f4e2f4f074162",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0543a36359e9e51b8",
            "tags": {
              "Name": "web_node_0"
            },
            "tags_all": {
              "Name": "web_node_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07fa3bc3cc2d0291c"
            ]
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:639043009224:instance/i-0a80d0194c488aa6d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a80d0194c488aa6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaxKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca6949c660fbca89",
            "private_dns": "ip-10-102-1-162.eu-central-1.compute.internal",
            "private_ip": "10.102.1.162",
            "public_dns": "ec2-18-197-151-16.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.151.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070aef9111bd0aa27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0848d9f6aba4fd008",
            "tags": {
              "Name": "web_node_1"
            },
            "tags_all": {
              "Name": "web_node_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07fa3bc3cc2d0291c"
            ]
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:internet-gateway/igw-09e56fd37e8b92328",
            "id": "igw-09e56fd37e8b92328",
            "owner_id": "639043009224",
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "dependencies": [
            "aws_vpc.VPC-LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:internet-gateway/igw-0467347d840da3d4d",
            "id": "igw-0467347d840da3d4d",
            "owner_id": "639043009224",
            "vpc_id": "vpc-053bf72ab72f2a168"
          },
          "dependencies": [
            "aws_vpc.VPC-AppServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:internet-gateway/igw-02901147c4eb3a33a",
            "id": "igw-02901147c4eb3a33a",
            "owner_id": "639043009224",
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "dependencies": [
            "aws_vpc.VPC-DBNodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hapee_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:loadbalancer/app/hapee-test-alb/e3c412588a5e622e",
            "arn_suffix": "app/hapee-test-alb/e3c412588a5e622e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hapee-test-alb-1989902000.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:loadbalancer/app/hapee-test-alb/e3c412588a5e622e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hapee-test-alb",
            "security_groups": [
              "sg-0e2e56045c84f95d6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a88444f05b593764"
              },
              {
                "subnet_id": "subnet-0cbf7d0006c2d690b"
              }
            ],
            "subnets": [
              "subnet-0a88444f05b593764",
              "subnet-0cbf7d0006c2d690b"
            ],
            "tags": {
              "Name": "hapee_alb"
            },
            "tags_all": {
              "Name": "hapee_alb"
            },
            "vpc_id": "vpc-05736db1a0167803c",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.elb",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-LB",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hapee_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:listener/app/hapee-test-alb/e3c412588a5e622e/75c0198b4c5044e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:listener/app/hapee-test-alb/e3c412588a5e622e/75c0198b4c5044e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:loadbalancer/app/hapee-test-alb/e3c412588a5e622e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hapee_alb",
            "aws_lb_target_group.hapee_alb_target",
            "aws_security_group.elb",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-LB",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hapee_alb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "arn_suffix": "targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,202",
                "path": "/haproxy_status",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hapee-test-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "hapee_alb_tg"
            },
            "tags_all": {
              "Name": "hapee_alb_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "dependencies": [
            "aws_vpc.VPC-LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "hapee_alb_target_att",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f-20220607193448083300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "target_id": "i-00d8eaabb1fec6924"
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.hapee_node",
            "aws_instance.web_node",
            "aws_lb_target_group.hapee_alb_target",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f-20220607193448219300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "target_id": "i-0e3066322a7be62be"
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.hapee_node",
            "aws_instance.web_node",
            "aws_lb_target_group.hapee_alb_target",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f-20220607193448265000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "target_id": "i-00d8eaabb1fec6924"
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.hapee_node",
            "aws_instance.web_node",
            "aws_lb_target_group.hapee_alb_target",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f-20220607193448265000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:639043009224:targetgroup/hapee-test-alb-tg/fbcf05f3383f9d5f",
            "target_id": "i-0e3066322a7be62be"
          },
          "dependencies": [
            "aws_instance.db_node",
            "aws_instance.hapee_node",
            "aws_instance.web_node",
            "aws_lb_target_group.hapee_alb_target",
            "aws_security_group.app_sg",
            "aws_security_group.dbnode_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "data.aws_ami.fresh_amazon_linux",
            "data.aws_availability_zones.all",
            "data.template_file.db-userdata",
            "data.template_file.hapee-userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:route-table/rtb-0caf4a4d2a32cc23c",
            "id": "rtb-0caf4a4d2a32cc23c",
            "owner_id": "639043009224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e56fd37e8b92328",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.102.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-08db4e68d82c25d06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-LB-RT"
            },
            "tags_all": {
              "Name": "VPC-LB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:route-table/rtb-0b284ed1aab85ef90",
            "id": "rtb-0b284ed1aab85ef90",
            "owner_id": "639043009224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0467347d840da3d4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.101.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-08db4e68d82c25d06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.103.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0e1379e01e6509d2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-App-RT"
            },
            "tags_all": {
              "Name": "VPC-App-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bf72ab72f2a168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw2",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2",
            "aws_vpc_peering_connection.VPC2-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:route-table/rtb-059b2fc18f2b7b889",
            "id": "rtb-059b2fc18f2b7b889",
            "owner_id": "639043009224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02901147c4eb3a33a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.102.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0e1379e01e6509d2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-DB-RT"
            },
            "tags_all": {
              "Name": "VPC-DB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw3",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc_peering_connection.VPC2-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03036dc5fbfd2856d",
            "route_table_id": "rtb-0caf4a4d2a32cc23c",
            "subnet_id": "subnet-0a88444f05b593764"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3c79565f2f544c6",
            "route_table_id": "rtb-0caf4a4d2a32cc23c",
            "subnet_id": "subnet-0cbf7d0006c2d690b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.PublicSubnetLB",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04945de3b4f1302f8",
            "route_table_id": "rtb-0b284ed1aab85ef90",
            "subnet_id": "subnet-0543a36359e9e51b8"
          },
          "dependencies": [
            "aws_internet_gateway.gw2",
            "aws_route_table.r2",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2",
            "aws_vpc_peering_connection.VPC2-3",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07158dbb7c14d94d3",
            "route_table_id": "rtb-0b284ed1aab85ef90",
            "subnet_id": "subnet-0848d9f6aba4fd008"
          },
          "dependencies": [
            "aws_internet_gateway.gw2",
            "aws_route_table.r2",
            "aws_subnet.PrivateSubnetAppServers",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc.VPC-LB",
            "aws_vpc_peering_connection.VPC1-2",
            "aws_vpc_peering_connection.VPC2-3",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e86115b01650c8",
            "route_table_id": "rtb-059b2fc18f2b7b889",
            "subnet_id": "subnet-02d00e93b4f15246b"
          },
          "dependencies": [
            "aws_internet_gateway.gw3",
            "aws_route_table.r3",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc_peering_connection.VPC2-3",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1fc4ceb0fe9644",
            "route_table_id": "rtb-059b2fc18f2b7b889",
            "subnet_id": "subnet-079e02ca7d034f0a7"
          },
          "dependencies": [
            "aws_internet_gateway.gw3",
            "aws_route_table.r3",
            "aws_subnet.PrivateSubnetDBNodes",
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes",
            "aws_vpc_peering_connection.VPC2-3",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:security-group/sg-07fa3bc3cc2d0291c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fa3bc3cc2d0291c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg",
            "name_prefix": "",
            "owner_id": "639043009224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "APP_SG"
            },
            "tags_all": {
              "Name": "APP_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bf72ab72f2a168"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-AppServers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbnode_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:security-group/sg-0f68c1e24411e06c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68c1e24411e06c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dbnode_sg",
            "name_prefix": "",
            "owner_id": "639043009224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB_SG"
            },
            "tags_all": {
              "Name": "DB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-DBNodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:security-group/sg-0e2e56045c84f95d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2e56045c84f95d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "639043009224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:security-group/sg-03f3540469bcb7b0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f3540469bcb7b0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Load Balancer Security Group",
            "name_prefix": "",
            "owner_id": "639043009224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LB_SG"
            },
            "tags_all": {
              "Name": "LB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetAppServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-0543a36359e9e51b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.102.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543a36359e9e51b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetAppServers"
            },
            "tags_all": {
              "Name": "PrivateSubnetAppServers"
            },
            "vpc_id": "vpc-053bf72ab72f2a168"
          },
          "dependencies": [
            "aws_vpc.VPC-AppServers",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-0848d9f6aba4fd008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.102.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0848d9f6aba4fd008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetAppServers"
            },
            "tags_all": {
              "Name": "PrivateSubnetAppServers"
            },
            "vpc_id": "vpc-053bf72ab72f2a168"
          },
          "dependencies": [
            "aws_vpc.VPC-AppServers",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetDBNodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-02d00e93b4f15246b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.103.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d00e93b4f15246b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetDBNodes"
            },
            "tags_all": {
              "Name": "PrivateSubnetDBNodes"
            },
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "dependencies": [
            "aws_vpc.VPC-DBNodes",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-079e02ca7d034f0a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.103.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e02ca7d034f0a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnetDBNodes"
            },
            "tags_all": {
              "Name": "PrivateSubnetDBNodes"
            },
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "dependencies": [
            "aws_vpc.VPC-DBNodes",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-0a88444f05b593764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.101.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a88444f05b593764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetLB"
            },
            "tags_all": {
              "Name": "PublicSubnetLB"
            },
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "dependencies": [
            "aws_vpc.VPC-LB",
            "data.aws_availability_zones.all"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:subnet/subnet-0cbf7d0006c2d690b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.101.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbf7d0006c2d690b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "639043009224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnetLB"
            },
            "tags_all": {
              "Name": "PublicSubnetLB"
            },
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "dependencies": [
            "aws_vpc.VPC-LB",
            "data.aws_availability_zones.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-AppServers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:vpc/vpc-053bf72ab72f2a168",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.102.0.0/16",
            "default_network_acl_id": "acl-092fc1204bdc1f7a8",
            "default_route_table_id": "rtb-048950a049413466a",
            "default_security_group_id": "sg-02f5c2f877675f068",
            "dhcp_options_id": "dopt-096306b9156882a86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-053bf72ab72f2a168",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048950a049413466a",
            "owner_id": "639043009224",
            "tags": {
              "Name": "VPC-AppServers"
            },
            "tags_all": {
              "Name": "VPC-AppServers"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-DBNodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:vpc/vpc-0ad49e2c6afd5a746",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.103.0.0/16",
            "default_network_acl_id": "acl-08ecc1f982bd66fff",
            "default_route_table_id": "rtb-02617436b45c1b5c3",
            "default_security_group_id": "sg-05b816bdfb5116e73",
            "dhcp_options_id": "dopt-096306b9156882a86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad49e2c6afd5a746",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02617436b45c1b5c3",
            "owner_id": "639043009224",
            "tags": {
              "Name": "VPC-DBNodes"
            },
            "tags_all": {
              "Name": "VPC-DBNodes"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:639043009224:vpc/vpc-05736db1a0167803c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.0.0/16",
            "default_network_acl_id": "acl-0786f0b2a42ab45aa",
            "default_route_table_id": "rtb-09309398b405b4e62",
            "default_security_group_id": "sg-08ec945fcdbf21129",
            "dhcp_options_id": "dopt-096306b9156882a86",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05736db1a0167803c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09309398b405b4e62",
            "owner_id": "639043009224",
            "tags": {
              "Name": "VPC-LB"
            },
            "tags_all": {
              "Name": "VPC-LB"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "VPC1-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08db4e68d82c25d06",
            "peer_owner_id": "639043009224",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-053bf72ab72f2a168",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between Load Balancers and Web nodes"
            },
            "tags_all": {
              "Name": "VPC Peering between Load Balancers and Web nodes"
            },
            "vpc_id": "vpc-05736db1a0167803c"
          },
          "dependencies": [
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-LB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "VPC2-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e1379e01e6509d2d",
            "peer_owner_id": "639043009224",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-053bf72ab72f2a168",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between Web nodes and DB nodes"
            },
            "tags_all": {
              "Name": "VPC Peering between Web nodes and DB nodes"
            },
            "vpc_id": "vpc-0ad49e2c6afd5a746"
          },
          "dependencies": [
            "aws_vpc.VPC-AppServers",
            "aws_vpc.VPC-DBNodes"
          ]
        }
      ]
    }
  ]
}